[package]
name = "lazy-prime-sieve"
description = "Lazy Sieve of Eratosthenes for infinitely generating primes lazily in Rust."
repository = "https://github.com/arindas/lazy-prime-sieve"
keywords = ["prime-sieve", "lazy-evaluation"]
categories = ["algorithms"]
license = "MIT"
version = "0.1.3"
edition = "2021"
exclude = [".github/", "assets/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
bench = false

[dependencies]

[dev-dependencies]
criterion = "0.5"
paste = "1"

[[bench]]
name = "sieves"
harness = false
